<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom de famille</string>
    <string name="birthdate">Date de naissance</string>
    <string name="city">Ville</string>
    <string name="department">Département</string>
    <string name="send">Envoyer</string>
    <string name="default_first_name">Jean</string>
    <string name="default_last_name">Dupont</string>
    <string name="default_city">Plouplou</string>
    <string name="default_date">JJ/MM/AAAA</string>
    <string name="dismiss">Vas-y va-t-en</string>
    <string name="reset_action">Je reset</string>
    <string name="add_phone">+</string>
    <string name="rechercheWikipedia">Recherche Wikipédia</string>
    <string name="share">Partager ville</string>
    <string name="confirm">Confirmer</string>
    <string name="cancel">Annuler</string>
    <string name="pickDateActivity">Pick Date Activity</string>
    <string name="viewLastNameActivity">Consulter le nom de famille...</string>
    <string name="editFirstNameActivity">Modifier le prénom...</string>
    <string name="enter_name">Ecriver votre nom (stp...)</string>
    <string name="dialActivity">Choix de victime</string>
    <string name="back">Retour</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
